Wed Mar 18 17:46:31 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_match): forwading failure point popped too much. 

Tue Mar 17 18:23:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* math.c (math_frexp): newly added.

	* math.c (math_ldexp): ditto.

	* bignum.c (bigdivmod): calculates modulo.

	* numeric.c (fix_remainder): returns reminder, formerly known as
 	  modulo.

	* numeric.c (fix_modulo): calculates proper `modulo'.

	* bignum.c (bigdivmod): wrong sign for reminder.

Mon Mar 16 17:07:28 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_03.

Mon Mar 16 16:33:53 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* io.c (pipe_finalize): needed to add pipe_finalize to pipes on
	  cygwin32.

Mon Mar 16 14:11:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* class.c (ins_methods_i): needed to consider NOEX_UNDEF.

Mon Mar 16 13:23:53 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* io.c (io_check_closed): check for `fptr->f2 == NULL'.

	* io.c (io_fptr_close): ditto.

Mon Mar 16 11:49:25 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (pipe_atexit): free()ing referencing pipe_list.

	* range.c (range_length): returns zero, if the first is greater
	  than the last.

	* signal.c (trap_restore_mask): restore signal mask before raising 
	  exceptions and throws.

Fri Mar 13 13:49:24 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_02.

	* object.c (mod_clone): need to dups constants and instance
	  variables.

	* eval.c (rb_eval): forgot to initialize body for NODE_DEFS.

	* eval.c (rb_eval): retrieve self from calling frame, since self
	  changes sometimes.

	* env.h (FRAME): need to save self in the calling frame.

	* io.c (f_gets_method): rs should be initialized by RS.

Thu Mar 12 15:33:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_01.

	* range.c (range_s_new): check values by `first <= last'.
