@@ -1,5 +1,8 @@
 Wed Mar 18 17:46:31 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
+	* ruby.c (load_file): new file object constant DATA.  Only
+	  available for the script from the file.
+
 	* regex.c (re_match): forwading failure point popped too much. 
 
 Tue Mar 17 18:23:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
